--- a/Tarefas/Tarefa 1/815437.ipynb
+++ b/Tarefas/Tarefa 1/815437.ipynb
@@ -700,13 +700,13 @@
     "\n",
     "# building df to plot the PR curve\n",
     "\n",
-    "for threshold in range(0, 1001):\n",
+    "for threshold in range(0, 1001):   # testing for 1001 thresholds\n",
     "    threshold = threshold/1000\n",
-    "    precision_cnb, recall_cnb = get_precision_recall(y_proba_cnb, y_test, threshold)\n",
+    "    precision_cnb, recall_cnb = get_precision_recall(y_proba_cnb, y_test, threshold)  # testing threshold for each classifier\n",
     "    precision_svm, recall_svm = get_precision_recall(y_proba_svm, y_test, threshold)\n",
     "    precision_lr, recall_lr = get_precision_recall(y_proba_lr, y_test, threshold)\n",
     "    \n",
-    "    if threshold == 0:\n",
+    "    if threshold == 0:  # building array to create the data frame for the plot\n",
     "        data = np.array([[threshold, \"CategoricalNB\", precision_cnb, recall_cnb], [threshold, \"SVM\", precision_svm, recall_svm] ,[threshold, \"LogisticRegression\", precision_lr, recall_lr]]) \n",
     "    else:\n",
     "        data = np.vstack([data, np.array([[threshold, \"CategoricalNB\", precision_cnb, recall_cnb], [threshold, \"SVM\", precision_svm, recall_svm], [threshold, \"LogisticRegression\", precision_lr, recall_lr]])])\n",
@@ -863,11 +863,11 @@
    ],
    "source": [
     "# Fill in your code where necessary\n",
-    "cnb_auprc = average_precision_score(y_true=y_test, y_score=y_proba_cnb[:,1])   # your code goes here\n",
+    "cnb_auprc = average_precision_score(y_true=y_test, y_score=y_proba_cnb[:,1]) # your code goes here\n",
     "print(\"The AUPRC for the Categorical Naive Bayes classifier is: {}\".format(cnb_auprc))\n",
-    "svm_auprc = average_precision_score(y_true=y_test, y_score=y_proba_svm[:,1])# your code goes here\n",
+    "svm_auprc = average_precision_score(y_true=y_test, y_score=y_proba_svm[:,1]) # your code goes here\n",
     "print(\"The AUPRC for the SVM classifier is: {}\".format(svm_auprc))\n",
-    "lr_auprc = average_precision_score(y_true=y_test, y_score=y_proba_lr[:,1])# your code goes here\n",
+    "lr_auprc = average_precision_score(y_true=y_test, y_score=y_proba_lr[:,1]) # your code goes here\n",
     "print(\"The AUPRC for the Logistic Regression classifier is: {}\".format(lr_auprc))"
    ]
   },
@@ -974,7 +974,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "# MADE IN BONUS"
    ]
   },
   {
@@ -1005,10 +1006,10 @@
    ],
    "source": [
     "# Your code for the bonus marks goes here\n",
-    "error = y_test_boston - y_predict_lin_reg\n",
-    "squared_error = error * error\n",
-    "mean_squared_error = squared_error.mean()\n",
-    "RMSE = mean_squared_error**(0.5)\n",
+    "error = y_test_boston - y_predict_lin_reg # creating series with the error of each element per index\n",
+    "squared_error = error * error  # series made of the square of each element of the error series\n",
+    "mean_squared_error = squared_error.mean() # calculating the mean of the squared errors\n",
+    "RMSE = mean_squared_error**(0.5) # calculating the root of the mean\n",
     "RMSE"
    ]
   }
